[gd_scene load_steps=2 format=3 uid="uid://c6qbxv0cxeij3"]

[ext_resource type="Script" uid="uid://clutc6t548t3e" path="res://scripts/background/scroller.gd" id="1_3wee8"]

[node name="BackgroundScroller" type="ParallaxBackground"]
script = ExtResource("1_3wee8")

[node name="FarLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_scale = Vector2(1, 0.2)
motion_mirroring = Vector2(0, 2160)

[node name="ColoredBlocks" type="Node2D" parent="FarLayer"]

[node name="MidLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_scale = Vector2(1, 0.5)
motion_mirroring = Vector2(0, 2160)

[node name="ColoredBlocks" type="Node2D" parent="MidLayer"]

[node name="NearLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_scale = Vector2(1, 0.8)
motion_mirroring = Vector2(0, 2160)

[node name="ColoredBlocks" type="Node2D" parent="NearLayer"]
